<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/wechat"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_remove_all_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/remove_all_fragment"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_replace_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_banner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp" />

    <FrameLayout
        android:id="@+id/dynamic_fragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_banner"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent" >
        <TextView
            android:id="@+id/chats"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/chats"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/contacts"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/contacts"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/discover"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/discover"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/me"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/me"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>